[package]
name = "gossip_glomers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
color-eyre = "0.6"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"

[[bin]]
name = "echo"
path = "src/challenges/echo.rs"

[[bin]]
name = "unique_ids"
path = "src/challenges/unique_ids.rs"

[[bin]]
name = "broadcast"
path = "src/challenges/broadcast.rs"
