[package]
name = "distributed_systems_challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
color-eyre = "0.6"
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"

[[bin]]
name = "echo"
path = "src/challenges/echo.rs"

[[bin]]
name = "unique_ids"
path = "src/challenges/unique_ids.rs"

[[bin]]
name = "broadcast"
path = "src/challenges/broadcast.rs"

[[bin]]
name = "grow_only_counter"
path = "src/challenges/grow_only_counter.rs"

[[bin]]
name = "kafka"
path = "src/challenges/kafka.rs"
